<resources>
    <string name="app_name">Video Streaming Android App</string>
    <string name="comments">Comments</string>
    <string name="icc_world_t20_2021_pakistan_vs_india_highlights_today_wt20_highlights">Icc World T20 2021 - Pakistan vs India Highlights today - Wt20 Highlights</string>
    <string name="mahad_jtni_dfa_b_dekho_hr_dfa_mza_aata">Mahad: jtni dfa b dekho hr dfa mza aata</string>
    <string name="ans_sahi_kutty_wali_ki_hai_indian_k_sath">Ans: sahi kutty wali ki hai Indian k sath</string>
    <string name="zain">Zain: ♥️♥️♥️</string>
</resources>